[package]
name = "hahabot"
version = "0.1.1"
authors = ["Alex Bush <swapoff@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "*"
env_logger = "*"
log = "*"
reqwest = "0.9.11"
select = "*"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
carapax = { version = "0.10.0", features = ["session"] }
rusqlite = "0.21.0"
time = "0.1.0"
htmlescape = "0.3.1"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
chrono = "0.4.11"

