[package]
name = "hahabot"
version = "0.1.2"
authors = ["Alex Bush <swapoff@gmail.com>", "Anatoly Y <iskhartakh@gmail.com>"]
edition = "2018"

[dependencies]
carapax = { version = "0.10", features = ["session"] }
carapax-codegen = "0.2"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.8"
htmlescape = "0.3"
log = "0.4"
reqwest = "0.9"
rusqlite = "0.24"
select = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

